2013-08-09  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* configure.in:  Change configuration option from --with-wx-config=PATH
	to --with-wx=DIR.  The is more consistent both with other gnuplot
	configuration options and with the upstream documentation for wx.

2013-08-09  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c src/misc.c src/save.c src/term_api.h src/term.c:
	New arrow style option "fixed" disables the re-sizing of arrow heads
	for short arrows.

2013-08-08  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c (draw_clip_polygon):  Sometimes the clipping status of
	the current point and the line segment it is supposedly the end of do
	not match.  This probably indicates a bug somewhere else, but in any
	case we need to adjust the clipping to match the line segment.
	Bug #1268

 	* src/gadgets.c src/misc.c src/save.c src/set.c src/show.c src/term.c
	src/term_api.h:  New arrow style option "noborder" requests a filled 
	arrowhead with no line drawn around the outside.  This has the effect
	of guaranteeing that the tip of the arrow head is exactly on the
	coordinate of the end of the vector;  otherwise the linewidth of the
	border causes the tip to extend beyond this coordinate.
	Bug #1109

 	* demo/arrowstyle.dem docs/gnuplot.doc:  Document and illustrate.

2013-08-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c:  Add comment noting that axis_position_zeroaxis() must
	be called for each axis before plotting in order to set axis->term_zero.

	* src/graphics.c:  It is incorrect to skip the initial calls to
	axis_draw_2d_zeroaxis even if we know the zero axes will be drawn
	again later (e.g. grid is off or front).
	Bug #1267

	* src/datafile.c:  Fix segfault if we try to store strlen of a NULL
	column header string.

2013-08-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (pop_or_convert_from_string):  Context-dependent 
	conversion of a string containing a number to an actual number is