@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.300 2013/07/14 18:20:37 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.301 2013/08/08 21:40:31 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -87,9 +87,6 @@ static void show_fillstyle __PROTO((void));
 static void show_clip __PROTO((void));
 static void show_contour __PROTO((void));
 static void show_dgrid3d __PROTO((void));
-#ifdef GP_MACROS
-static void show_macros __PROTO((void));
-#endif
 static void show_mapping __PROTO((void));
 static void show_dummy __PROTO((void));
 static void show_format __PROTO((void));
@@ -238,11 +235,9 @@ show_command()
     case S_DGRID3D:
 	show_dgrid3d();
 	break;
-#ifdef GP_MACROS
     case S_MACROS:
-	show_macros();
+	/* Aug 2013: macros are always enabled */
 	break;
-#endif
     case S_MAPPING:
 	show_mapping();
 	break;
@@ -718,9 +713,6 @@ show_all()
     show_clip();
     show_contour();
     show_dgrid3d();
-#ifdef GP_MACROS
-    show_macros();
-#endif
     show_mapping();
     show_dummy();
     show_format();
@@ -957,9 +949,7 @@ show_version(FILE *fp)
 		"+OBJECTS  "
 #endif
 		"+STRINGVARS  "
-#ifdef GP_MACROS
 		"+MACROS  "
-#endif
 # ifdef THIN_PLATE_SPLINES_GRID
 		"+THIN_SPLINES  "
 # endif
@@ -1359,17 +1349,6 @@ show_dgrid3d()
     else
 	fputs("\tdata grid3d is disabled\n", stderr);
 }
-
-#ifdef GP_MACROS
-/* process 'show macros' command */
-static void
-show_macros()
-{
-    SHOW_ALL_NL;
-    fprintf(stderr,"\tcommand line macros will %sbe expanded\n",
-	expand_macros ? "" : "not ");
-}
-#endif
 
 /* process 'show mapping' command */
 static void
