@@ -4,6 +4,14 @@
 	to --with-wx=DIR.  The is more consistent both with other gnuplot
 	configuration options and with the upstream documentation for wx.
 
+2013-08-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* configure.in src/command.c src/command.h src/save.c src/set.c
+	src/show.c src/tables.c src/unset.c demo/macros.dem:
+	Remove configuration option for command line macros.
+	It's cheap. People use it. It doesn't conflict with anything else.
+	There seems little reason to carry along extra code to disable it.
+
 2013-08-09  Christoph Bersch <usenet@bersch.net>
 
 	* src/gadgets.c src/misc.c src/save.c src/term_api.h src/term.c:
